<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" 
    android:gravity="center"
    android:background="@drawable/background_800_480_240dpi"
    tools:context=".MainMenuActivity" >

    <com.petrovdevelopment.dumanica.libs.MagicTextButton
        xmlns:qwerjk="http://schemas.android.com/apk/res/com.petrovdevelopment.dumanica"
        android:text="@string/title_activity_main_menu" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"        
        android:textSize="25sp"
        android:textColor="@color/LimeGreen"
        android:padding="10dp" 
        qwerjk:strokeColor="@color/Black"
        qwerjk:strokeJoinStyle="round"
        qwerjk:strokeWidth="3"
        qwerjk:outerShadowColor="@color/Yellow"
        qwerjk:outerShadowDy="0"
        qwerjk:outerShadowRadius="10"
       	/>

        <com.petrovdevelopment.dumanica.libs.MagicTextButton
            xmlns:qwerjk="http://schemas.android.com/apk/res/com.petrovdevelopment.dumanica"
            android:text="@string/new_game" 
            android:onClick="onNewGameClick"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:textColor="@color/White" 
            android:padding="10dp"
            qwerjk:strokeColor="@color/Black"
            qwerjk:strokeJoinStyle="round"
            qwerjk:strokeWidth="3"
            qwerjk:outerShadowColor="@color/LimeGreen"
            qwerjk:outerShadowDy="0"
            qwerjk:outerShadowRadius="15"
            android:background="@drawable/button_menu"
            />
        
        <com.petrovdevelopment.dumanica.libs.MagicTextButton
            xmlns:qwerjk="http://schemas.android.com/apk/res/com.petrovdevelopment.dumanica"
            android:text="@string/options" 
            android:onClick="onOptionsClick" 
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"            
            android:textSize="15sp"
            android:textColor="@color/White" 
            android:padding="10dp"
            qwerjk:strokeColor="@color/Black"
            qwerjk:strokeJoinStyle="round"
            qwerjk:strokeWidth="3"
            qwerjk:outerShadowColor="@color/LimeGreen"
            qwerjk:outerShadowDy="0"
            qwerjk:outerShadowRadius="15"     
            android:background="@drawable/button_menu"                  
            />
        	
		<com.petrovdevelopment.dumanica.libs.MagicTextButton
            xmlns:qwerjk="http://schemas.android.com/apk/res/com.petrovdevelopment.dumanica"
            android:text="@string/exit" 
            android:onClick="onExitClick" 
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"            
            android:textSize="15sp"
            android:textColor="@color/White" 
            android:padding="10dp"
            qwerjk:strokeColor="@color/Black"
            qwerjk:strokeJoinStyle="round"
            qwerjk:strokeWidth="3"
            qwerjk:outerShadowColor="@color/LimeGreen"
            qwerjk:outerShadowDy="0"
            qwerjk:outerShadowRadius="15"   
            android:background="@drawable/button_menu"                    
            />
</LinearLayout>
   
